# allegcb

./: CMakeLists.txt  README.md
cmake/: FindAllegro.cmake  alleg.cmake  misc.cmake
src/: dataload.c  dataload.h  gmath.c  gmath.h  main.c  main.h  mainloop.c
